# batchit

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/batchit/: __init__.py  _async.py  _queue.py  _sync.py
tests/: test_async.py  test_drain_queue.py  test_sync.py  test_weight.py  test_weighted.py
