[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batchit"
version = "0.1.0"
description = "Batch any Python iterator by count and/or elapsed time"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ahmedie-m", email = "61509242+Ahmedie-m@users.noreply.github.com" }
]
keywords = ["batch", "iterator", "streaming", "kafka", "async", "timeout"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Ahmedie-m/batchit"
Repository = "https://github.com/Ahmedie-m/batchit"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/batchit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
